--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">InterestingPlaces</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="logo">Interesting Places \nApp</string>
+    <string name="new_places_spb">Узнай больше \nОб интересных местах \nПетербурга</string>
+    <string name="lets_go">Поехали!</string>
 </resources>
