--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,17 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="logo">Interesting Places \nApp</string>
-    <string name="new_places_spb">Узнай больше \nОб интересных местах \nПетербурга</string>
-    <string name="lets_go">Поехали!</string>
+    <string name="new_places_spb">Не знаешь куда сходить? \nУзнай больше \nОб интересных местах \nПетербурга</string>
+    <string name="popular">Популярные</string>
+    <string name="recommended">Рекомедованные</string>
+    <string name="place_gallery">Галерея места:</string>
+    <string name="go_site">Перейти на сайт</string>
+    <string name="address">Адрес</string>
+    <string name="site">Сайт</string>
+    <string name="timetable">Расписание работы</string>
+    <string name="subway">метро</string>
+    <string name="topbar_ineresting">Интересное</string>
+    <string name="topbar_search">Поиск</string>
+    <string name="topbar_favorite">Нравится</string>
+    <string name="description_information">Информация:</string>
 </resources>
